k8s/apps/base/homelab/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
